Menu fixo, adição do overflow, menu mais fluido

--- a/Exercicios/estilos/menu.css
+++ b/Exercicios/estilos/menu.css
@@ -1,9 +1,15 @@
 @charset "UTF-8";
 
 nav{
-    width: 18%;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    overflow-y: auto;
+    width: 18vw;
+    height: 100vh;
     margin: 10px;
     font-family: var(--font_h);
+    background-color: var(--preto);
 }
 #inicio{
     font-size: 1.5em;
@@ -27,14 +33,20 @@ ul{
     list-style: none;
     box-sizing: border-box;
 }
+ul p{
+    display: flex;
+    padding: 10px;
+    margin: 0px;
+    text-align: left;
+    color: white;
+}
 .menu_ul{
-    height: 55pxpx;
     margin: 15px;
+    color: white;
 }
 ul:hover{
     border: 1px solid white;
     border-radius: 5px;
-
     transition: 0.4s;
 }
 nav > ul >ul:hover{
@@ -80,5 +92,12 @@ li{
 li:hover{
     cursor: pointer;
     text-decoration: underline;
+    background-color: var(--cinza_mid);
+}
+li a{
+    padding: 0px;
+    background-color: var(--cinza_light);
+}
+li:hover a{
     background-color: var(--cinza_mid);
 }
